--- a/src/pages/AuthFilesPage.module.scss
+++ b/src/pages/AuthFilesPage.module.scss
@@ -217,7 +217,6 @@
   background-color: var(--bg-tertiary);
   color: var(--text-primary);
   white-space: nowrap;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.6);
 }
 
 .statSuccess {
